<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient">


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/confirm_button_ripple"
        android:text="@string/Confirm_button"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Points_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="349dp"
        android:layout_height="257dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/Button_option1"
            android:layout_width="334dp"
            android:layout_height="51dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Option 1"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Button_option_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <RadioButton
            android:id="@+id/Button_option_2"
            android:layout_width="335dp"
            android:layout_height="47dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Option 2"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Button_option3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Button_option1"
            tools:ignore="UnknownId" />

        <RadioButton
            android:id="@+id/Button_option3"
            android:layout_width="336dp"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Option 3"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Button_option4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Button_option_2"
            app:layout_constraintVertical_bias="0.44" />

        <RadioButton
            android:id="@+id/Button_option4"
            android:layout_width="335dp"
            android:layout_height="46dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:text="Option 4"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Points_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Button_option3"
            app:layout_constraintVertical_bias="0.131" />
    </RadioGroup>


    <TextView
        android:id="@+id/Timer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="serif"
        android:text="00:15"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/hint_Button3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif"
        android:text="Questions here Show / write !
Questions here Show / write !
Questions here Show / write !
Questions here Show / write !
Questions here Show / write !"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_Button3" />

    <Button
        android:id="@+id/hint_Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/hint_button_round_ripple"
        android:fontFamily="sans-serif"
        android:text="@string/Hint_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/Timer3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/Points_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/points"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>